bindings/dart/lib/src/revault_native.dart


final class RevaultNative {
  RevaultNative(ffi.DynamicLibrary library)
    : _api_abi_version = library
          .lookupFunction<_ApiAbiVersionNative, _ApiAbiVersionDart>(
            'api_abi_version',
          ),
      _buffer_last_error = library
          .lookupFunction<_BufferLastErrorNative, _BufferLastErrorDart>(
            'buffer_last_error',
          ),
      _buffer_last_error_details = library
          .lookupFunction<
            _BufferLastErrorDetailsNative,
            _BufferLastErrorDetailsDart
          >('buffer_last_error_details'),
      _buffer_free = library.lookupFunction<_BufferFreeNative, _BufferFreeDart>(
        'buffer_free',
      ),
      _secret_len = library.lookupFunction<_SecretLenNative, _SecretLenDart>(
        'secret_len',
      ),
      _secret_copy = library.lookupFunction<_SecretCopyNative, _SecretCopyDart>(
        'secret_copy',
      ),
      _secret_free = library.lookupFunction<_SecretFreeNative, _SecretFreeDart>(
        'secret_free',
      ),
      _lockbox_format_version = library
          .lookupFunction<
            _LockboxFormatVersionNative,
            _LockboxFormatVersionDart
          >('lockbox_format_version'),
      _lockbox_probe_format_version = library
          .lookupFunction<
            _LockboxProbeFormatVersionNative,
            _LockboxProbeFormatVersionDart
          >('lockbox_probe_format_version'),
      _lockbox_create = library
          .lookupFunction<_LockboxCreateNative, _LockboxCreateDart>(
            'lockbox_create',
          ),
      _lockbox_create_with_options = library
          .lookupFunction<
            _LockboxCreateWithOptionsNative,
            _LockboxCreateWithOptionsDart
          >('lockbox_create_with_options'),
      _lockbox_create_password = library
          .lookupFunction<
            _LockboxCreatePasswordNative,
            _LockboxCreatePasswordDart
          >('lockbox_create_password'),
      _lockbox_create_contact = library
          .lookupFunction<
            _LockboxCreateContactNative,
            _LockboxCreateContactDart
          >('lockbox_create_contact'),
      _lockbox_create_with_signing_key = library
          .lookupFunction<
            _LockboxCreateWithSigningKeyNative,
            _LockboxCreateWithSigningKeyDart
          >('lockbox_create_with_signing_key'),
      _lockbox_open = library
          .lookupFunction<_LockboxOpenNative, _LockboxOpenDart>('lockbox_open'),
      _lockbox_open_with_options = library
          .lookupFunction<
            _LockboxOpenWithOptionsNative,
            _LockboxOpenWithOptionsDart
          >('lockbox_open_with_options'),
      _lockbox_open_password = library
          .lookupFunction<_LockboxOpenPasswordNative, _LockboxOpenPasswordDart>(
            'lockbox_open_password',
          ),
      _lockbox_open_contact = library
          .lookupFunction<_LockboxOpenContactNative, _LockboxOpenContactDart>(
            'lockbox_open_contact',
          ),
      _lockbox_add_file = library
          .lookupFunction<_LockboxAddFileNative, _LockboxAddFileDart>(
            'lockbox_add_file',
          ),
      _lockbox_add_file_with_permissions = library
          .lookupFunction<
            _LockboxAddFileWithPermissionsNative,
            _LockboxAddFileWithPermissionsDart
          >('lockbox_add_file_with_permissions'),
      _lockbox_get_file = library
          .lookupFunction<_LockboxGetFileNative, _LockboxGetFileDart>(
            'lockbox_get_file',
          ),
      _lockbox_extract_file = library
          .lookupFunction<_LockboxExtractFileNative, _LockboxExtractFileDart>(
            'lockbox_extract_file',
          ),
      _lockbox_extract_directory = library
          .lookupFunction<
            _LockboxExtractDirectoryNative,
            _LockboxExtractDirectoryDart
          >('lockbox_extract_directory'),
      _lockbox_stream_content = library
          .lookupFunction<
            _LockboxStreamContentNative,
            _LockboxStreamContentDart
          >('lockbox_stream_content'),
      _lockbox_cache_stats = library
          .lookupFunction<_LockboxCacheStatsNative, _LockboxCacheStatsDart>(
            'lockbox_cache_stats',
          ),
      _lockbox_import_stats = library
          .lookupFunction<_LockboxImportStatsNative, _LockboxImportStatsDart>(
            'lockbox_import_stats',
          ),
      _lockbox_reset_import_stats = library
          .lookupFunction<
            _LockboxResetImportStatsNative,
            _LockboxResetImportStatsDart
          >('lockbox_reset_import_stats'),
      _lockbox_inspect_file = library
          .lookupFunction<_LockboxInspectFileNative, _LockboxInspectFileDart>(
            'lockbox_inspect_file',
          ),
      _lockbox_page_inspection = library
          .lookupFunction<
            _LockboxPageInspectionNative,
            _LockboxPageInspectionDart
          >('lockbox_page_inspection'),
      _lockbox_recovery_report = library
          .lookupFunction<
            _LockboxRecoveryReportNative,
            _LockboxRecoveryReportDart
          >('lockbox_recovery_report'),
      _lockbox_recovery_report_render = library
          .lookupFunction<
            _LockboxRecoveryReportRenderNative,
            _LockboxRecoveryReportRenderDart
          >('lockbox_recovery_report_render'),
      _lockbox_recovery_scan_path = library
          .lookupFunction<
            _LockboxRecoveryScanPathNative,
            _LockboxRecoveryScanPathDart
          >('lockbox_recovery_scan_path'),
      _lockbox_storage_len = library
          .lookupFunction<_LockboxStorageLenNative, _LockboxStorageLenDart>(
            'lockbox_storage_len',
          ),
      _lockbox_set_workload_profile = library
          .lookupFunction<
            _LockboxSetWorkloadProfileNative,
            _LockboxSetWorkloadProfileDart
          >('lockbox_set_workload_profile'),
      _lockbox_set_worker_policy = library
          .lookupFunction<
            _LockboxSetWorkerPolicyNative,
            _LockboxSetWorkerPolicyDart
          >('lockbox_set_worker_policy'),
      _lockbox_runtime_options = library
          .lookupFunction<
            _LockboxRuntimeOptionsNative,
            _LockboxRuntimeOptionsDart
          >('lockbox_runtime_options'),
      _lockbox_commit = library
          .lookupFunction<_LockboxCommitNative, _LockboxCommitDart>(
            'lockbox_commit',
          ),
      _lockbox_create_dir = library
          .lookupFunction<_LockboxCreateDirNative, _LockboxCreateDirDart>(
            'lockbox_create_dir',
          ),
      _lockbox_delete = library
          .lookupFunction<_LockboxDeleteNative, _LockboxDeleteDart>(
            'lockbox_delete',
          ),
      _lockbox_remove_dir = library
          .lookupFunction<_LockboxRemoveDirNative, _LockboxRemoveDirDart>(
            'lockbox_remove_dir',
          ),
      _lockbox_create_parent_dirs = library
          .lookupFunction<
            _LockboxCreateParentDirsNative,
            _LockboxCreateParentDirsDart
          >('lockbox_create_parent_dirs'),
      _lockbox_rename = library
          .lookupFunction<_LockboxRenameNative, _LockboxRenameDart>(
            'lockbox_rename',
          ),
      _lockbox_list = library
          .lookupFunction<_LockboxListNative, _LockboxListDart>('lockbox_list'),
      _lockbox_list_with_options = library
          .lookupFunction<
            _LockboxListWithOptionsNative,
            _LockboxListWithOptionsDart
          >('lockbox_list_with_options'),
      _lockbox_stat = library
          .lookupFunction<_LockboxStatNative, _LockboxStatDart>('lockbox_stat'),
      _lockbox_set_variable = library
          .lookupFunction<_LockboxSetVariableNative, _LockboxSetVariableDart>(
            'lockbox_set_variable',
          ),
      _lockbox_set_secret_variable = library
          .lookupFunction<
            _LockboxSetSecretVariableNative,
            _LockboxSetSecretVariableDart
          >('lockbox_set_secret_variable'),
      _lockbox_get_variable = library
          .lookupFunction<_LockboxGetVariableNative, _LockboxGetVariableDart>(
            'lockbox_get_variable',
          ),
      _lockbox_get_secret_variable = library
          .lookupFunction<
            _LockboxGetSecretVariableNative,
            _LockboxGetSecretVariableDart
          >('lockbox_get_secret_variable'),
      _lockbox_delete_variable = library
          .lookupFunction<
            _LockboxDeleteVariableNative,
            _LockboxDeleteVariableDart
          >('lockbox_delete_variable'),
      _lockbox_move_variables = library
          .lookupFunction<
            _LockboxMoveVariablesNative,
            _LockboxMoveVariablesDart
          >('lockbox_move_variables'),
      _lockbox_list_variables = library
          .lookupFunction<
            _LockboxListVariablesNative,
            _LockboxListVariablesDart
          >('lockbox_list_variables'),
      _lockbox_variable_sensitivity = library
          .lookupFunction<
            _LockboxVariableSensitivityNative,
            _LockboxVariableSensitivityDart
          >('lockbox_variable_sensitivity'),
      _lockbox_add_symlink = library
          .lookupFunction<_LockboxAddSymlinkNative, _LockboxAddSymlinkDart>(
            'lockbox_add_symlink',
          ),
      _lockbox_get_symlink_target = library
          .lookupFunction<
            _LockboxGetSymlinkTargetNative,
            _LockboxGetSymlinkTargetDart
          >('lockbox_get_symlink_target'),
      _lockbox_id = library.lookupFunction<_LockboxIdNative, _LockboxIdDart>(
        'lockbox_id',
      ),
      _lockbox_exists = library
          .lookupFunction<_LockboxExistsNative, _LockboxExistsDart>(
            'lockbox_exists',
          ),
      _lockbox_is_dir = library
          .lookupFunction<_LockboxIsDirNative, _LockboxIsDirDart>(
            'lockbox_is_dir',
          ),
      _lockbox_permissions = library
          .lookupFunction<_LockboxPermissionsNative, _LockboxPermissionsDart>(
            'lockbox_permissions',
          ),
      _lockbox_set_permissions = library
          .lookupFunction<
            _LockboxSetPermissionsNative,
            _LockboxSetPermissionsDart
          >('lockbox_set_permissions'),
      _lockbox_read_range = library
          .lookupFunction<_LockboxReadRangeNative, _LockboxReadRangeDart>(
            'lockbox_read_range',
          ),
      _lockbox_recovery_scan = library
          .lookupFunction<_LockboxRecoveryScanNative, _LockboxRecoveryScanDart>(
            'lockbox_recovery_scan',
          ),
      _lockbox_recovery_salvage = library
          .lookupFunction<
            _LockboxRecoverySalvageNative,
            _LockboxRecoverySalvageDart
          >('lockbox_recovery_salvage'),
      _lockbox_add_password = library
          .lookupFunction<_LockboxAddPasswordNative, _LockboxAddPasswordDart>(
            'lockbox_add_password',
          ),
      _lockbox_add_contact = library
          .lookupFunction<_LockboxAddContactNative, _LockboxAddContactDart>(
            'lockbox_add_contact',
          ),
      _lockbox_delete_key = library
          .lookupFunction<_LockboxDeleteKeyNative, _LockboxDeleteKeyDart>(
            'lockbox_delete_key',
          ),
      _lockbox_list_key_slots = library
          .lookupFunction<_LockboxListKeySlotsNative, _LockboxListKeySlotsDart>(
            'lockbox_list_key_slots',
          ),
      _lockbox_set_owner_signing_key = library
          .lookupFunction<
            _LockboxSetOwnerSigningKeyNative,
            _LockboxSetOwnerSigningKeyDart
          >('lockbox_set_owner_signing_key'),
      _lockbox_owner_inspection = library
          .lookupFunction<
            _LockboxOwnerInspectionNative,
            _LockboxOwnerInspectionDart
          >('lockbox_owner_inspection'),
      _lockbox_define_form = library
          .lookupFunction<_LockboxDefineFormNative, _LockboxDefineFormDart>(
